--- a/app/index.html
+++ b/app/index.html
@@ -202,12 +202,12 @@
 		<div class="row analytics">
 			<div class="col-md-6 analytics-item">
 				<div class="analytics-container">
-					<chart title="{{charts[0].title}}" data="chartsData"></chart>
+					<chart options="charts[0]" data="chartsData"></chart>
 				</div>
 			</div>
 			<div class="col-md-6 analytics-item">
 				<div class="analytics-container">
-					<chart title="{{charts[1].title}}" data="chartsData"></chart>
+					<chart options="charts[1]" data="chartsData"></chart>
 				</div>
 			</div>
 			<!--<div class="col-md-4 analytics-item">
