--- a/RestApi/index.html
+++ b/RestApi/index.html
@@ -12,10 +12,10 @@
     <title>Fixed Top Navbar Example for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="app/css/bootstrap.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/index.css" rel="stylesheet">
-  	<script src="bundle.js"></script>
+    <link href="app/css/index.css" rel="stylesheet">
+  	<script src="app/bundle.js"></script>
   </head>
 
   <body ng-app="parcs">
