--- a/RestApi/index.html
+++ b/RestApi/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Mykola & Khavro">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Fixed Top Navbar Example for Bootstrap</title>
+    <title>Parcs Cloud</title>
 
     <!-- Bootstrap core CSS -->
     <link href="app/css/bootstrap.css" rel="stylesheet">
