about view added

--- a/RestApi/index.html
+++ b/RestApi/index.html
@@ -25,6 +25,8 @@
 	  <div class="container">
 		  <div ui-view></div>
 	  </div>
-
+		<footer class="footer">
+			<p>© 2016 Parcs Cloud</p>
+		</footer>
   </body>
 </html>
